# SAR-and-DL-for-Landslide-Rapid-Assessment

./: .gitignore  CONTRIBUTING.md  MODEL_CARD.md  PR_DESCRIPTION.md  README.md  issue-2-utils.patch  pyproject.toml
SAR-LRA Tool V1 for Google Colaboratory/: SAR_LRA_Tool_V1_Google_Colaboratory.ipynb
SAR-LRA Tool V2/: SAR_LRA_Tool_V2.ipynb
app/: __init__.py  cli.py  config.py  pipeline.py  schemas.py
app/acquisition/: __init__.py  earth_engine.py  local_raster.py
app/inference/: __init__.py  model.py  predict.py  windows.py
app/postprocessing/: __init__.py  raster.py  vector.py
app/preprocessing/: __init__.py  sentinel1.py
config/: default.yaml
docs/: configuration.md  container-contract.md  issue-3-refactor.md  issue-4-configuration.md  issue-5-acquisition-inference.md  issue-6-raster-validation.md  repository-layout.md
examples/requests/: request-event-date.json  request-explicit-ranges.json  request-file-roi.json
model/: weights-manifest.json
notebooks/SAR-LRA Tool V2/: SAR_LRA_Tool_V2.ipynb  utils.py
notebooks/v2/: SAR_LRA_Tool_V2.ipynb  utils.py
schemas/: request.schema.json  result-metadata.schema.json
scripts/: verify_model_weights.py
src/sar_lra/: __init__.py  constants.py
tests/unit/: test_cli_config.py  test_config.py  test_import_safety.py  test_mode_separation.py  test_raster_validation.py  test_result_metadata.py  test_schema.py  test_sentinel1.py  test_windows.py
