[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sar-lra"
version = "2.0.0b1"
description = "Sentinel-1 SAR-based rapid assessment of earthquake-triggered landslides"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {file = "LICENSE"}
authors = [{name = "SAR-LRA contributors"}]
dependencies = ["numpy>=1.24,<3", "PyYAML>=6,<7"]
classifiers = ["Development Status :: 4 - Beta", "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License"]

[project.optional-dependencies]
geo = ["rasterio>=1.3", "geopandas>=0.14", "shapely>=2"]
inference = ["tensorflow>=2.12,<2.19"]
earth-engine = ["earthengine-api>=1", "geemap>=0.35", "leafmap>=0.35"]
dev = ["pytest>=8", "ruff>=0.5", "build>=1.2"]
all = ["rasterio>=1.3", "geopandas>=0.14", "shapely>=2", "tensorflow>=2.12,<2.19", "earthengine-api>=1", "geemap>=0.35", "leafmap>=0.35"]

[project.scripts]
sar-lra = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "notebooks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
